@@ -37,6 +37,8 @@ Version 0.8 (in development)
 
 - Added a D lexer, thanks to Kirk McDonald.
 
+- Added a MuPad lexer, thanks to Christopher Creutzig.
+
 
 Version 0.7.1
 -------------
